--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -43,7 +43,7 @@ jobs:
 
     - name: Run tests
       run: |
-        docker run --name test_container -d noah4575/git_lab2:latest
+        docker run --name test_container -d noah4575/git_lab2:noah
         docker exec test_container python -m unittest discover
 
     - name: Push to Docker Hub
@@ -52,4 +52,11 @@ jobs:
       with:
         context: .
         push: true
-        tags: noah4575/git_lab2:latest
+        tags: noah4575/git_lab2:noah
+        labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Debug Info
+        run: |
+          echo "DOCKER_USERNAME: $DOCKER_USERNAME"
+          echo "GITHUB_TOKEN: $DOCKER_TOKEN"
+          # Add more debug information as needed
