--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,8 +45,8 @@ jobs:
     - name: Run tests
       run: |
         docker run --name test_container -d noah4575/git_lab2:noah
-        docker exec test_container python -m unittest discover
-    
+        docker exec test_container python -m unittest discover -s tests -p "test_*.py" -v
+        
     - name: Push to Docker Hub
       if: success()
       uses: docker/build-push-action@v2
