--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,23 +20,22 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Login to DockerHub
-        uses: docker/login-action@v1
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v1
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
           images: noah4575/git_lab2
 
       - name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
-          context: .
-          file: ./Dockerfile
+          dockerfile: ./Dockerfile
           push: true
           tags: noah4575/git_lab2:noah
           labels: ${{ steps.meta.outputs.labels }}
